Year expected fixed
Year expected fixed

Signed-off-by: Ihan Chang <162535941+IhanChang@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="profile-content">
                     <h1>Ihan Chang (张逸涵)</h1>
-                    <h2>PhD Student in Economics (2025 - 2029)</h2>
+                    <h2>PhD Student in Economics (2025 - 2029, expected)</h2>
                     <p class="affiliation">Centre for Applied Macroeconomic Analysis<br>
                     Crawford School of Public Policy<br>
                     College of Law, Governance and Policy<br>
