--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
 
                 <div class="section">
                     <h2>Teaching Experience</h2>
-                    <p>As a PhD student, I am developing my teaching skills through research supervision and academic collaboration. My teaching interests align with my research expertise in financial economics, tokenomics, and financial econometrics.</p>
+                    <p>As a new PhD student, I have not shouldered any teaching mission. But I am very interested in doing teaching assistant work in macroeconomics, financial economics, investment, corporate finance, and derivatives.</p>
                 </div>
 
                 <div class="section">
