--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ihan Chang - Academic Website</title>
+    <title>Ihan Chang - PhD Student in Economics | Financial Economics Research</title>
+    <meta name="description" content="Ihan Chang, PhD student in Economics at ANU Centre for Applied Macroeconomic Analysis. Research interests: Financial Economics, Tokenomics, Financial Econometrics. Supervised by Distinguished Prof. Renée Fry-McKibbin.">
+    <meta name="keywords" content="Ihan Chang, PhD Economics, Financial Economics, Tokenomics, Financial Econometrics, ANU, CAMA, Research, Academic">
+    <meta name="author" content="Ihan Chang">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Ihan Chang - PhD Student in Economics">
+    <meta property="og:description" content="PhD student in Economics at ANU specializing in Financial Economics, Tokenomics, and Financial Econometrics">
+    <meta property="og:url" content="https://ihanchang.github.io/website/">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
