--- a/research.html
+++ b/research.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research - Ihan Chang</title>
+    <title>Research - Ihan Chang | Financial Economics Publications & Working Papers</title>
+    <meta name="description" content="Research publications and working papers by Ihan Chang in Financial Economics, Tokenomics, and Financial Econometrics. PhD student at ANU CAMA.">
+    <meta name="keywords" content="Ihan Chang Research, Financial Economics, Publications, Working Papers, Academic Research, Economics">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
