--- a/teaching.html
+++ b/teaching.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teaching & Grants - Ihan Chang</title>
+    <title>Teaching & Grants - Ihan Chang | Academic Experience & Scholarships</title>
+    <meta name="description" content="Teaching interests and grants received by Ihan Chang. CSC Scholarship and ANU HDR Fee Remission Merit Scholarship recipient.">
+    <meta name="keywords" content="Ihan Chang Teaching, Academic Grants, CSC Scholarship, ANU Scholarship, Economics Teaching">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
