Revise bio details in index.html
Updated the bio section to clarify the role of Prof. Renée Fry-McKibbin.

Signed-off-by: Ihan Chang <162535941+IhanChang@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <div class="bio">
                         <h3>About</h3>
-                        <p>I am a PhD student at the <a href="https://crawford.anu.edu.au/cama" target="_blank">Centre for Applied Macroeconomic Analysis</a>, Crawford School of Public Policy, Australian National University, under the supervision of Distinguished <a href="https://www.rba.gov.au/about-rba/boards/monetary-policy-board/renee-fry-mckibbin.html" target="_blank">Prof. Renée Fry-McKibbin</a> (Monetary Policy Board member of RBA). I hold a Master's degree in International and Development Economics with a specialisation in Macro-Finance from ANU and a Bachelor's degree in Economics with a specialisation in Finance from Zhejiang University of Finance & Economics.</p>
+                        <p>I am a PhD student at the <a href="https://crawford.anu.edu.au/cama" target="_blank">Centre for Applied Macroeconomic Analysis</a>, Crawford School of Public Policy, Australian National University, under the supervision of Distinguished <a href="https://www.rba.gov.au/about-rba/boards/monetary-policy-board/renee-fry-mckibbin.html" target="_blank">Prof. Renée Fry-McKibbin</a>  (non-executive member of the RBA Monetary Policy Board). I hold a Master's degree in International and Development Economics with a specialisation in Macro-Finance from ANU and a Bachelor's degree in Economics with a specialisation in Finance from Zhejiang University of Finance & Economics.</p>
                     </div>
 
                     <div class="contact-info">
