--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <img src="profile-photo.jpg" alt="Ihan Chang" />
                     <div class="profile-note">
                         <h3>About My Profile</h3>
-                        <p>My profile features Psyduck, inspired by the Chinese poem "春江水暖鸭先知" (Spring River Plumbing Duck Prophet) - meaning "ducks are the first to know when the spring river turns warm." I hope to become as perceptive as a duck in discerning future developments and crises in the financial economics field.</p>
+                        <p>My profile features Psyduck, inspired by the Chinese poem 春江水暖鸭先知, meaning ‘ducks are the first to know when the spring river warms.’ I hope to be as perceptive as the ducks in discerning future trends and crises in financial economics.</p>
                     </div>
                 </div>
                 <div class="profile-content">
